# GUI-Agent-Harness

./: .gitignore  README.md  core-principles.md  pyproject.toml  requirements.txt
actions/: _actions_windows.yaml
benchmarks/: README.md
benchmarks/mmbench_gui_l2/: README.md
benchmarks/osworld/: gimp_gpt55_run_errors.md  learn_gimp.py  run_batch.sh  run_gimp_fixed.sh  run_osworld_task.py  thunderbird_gpt55_run_errors.md  vlc_gpt55_run_errors.md
benchmarks/osworld/config/: gimp_fixed.json
benchmarks/report/: full_m3_optimal_summary.json
benchmarks/screenspot_pro/: BEST_CONFIG.md  README.md  UI_VISION_OPTIMIZATION_LOG.md  aggregate_ablation.py  aggregate_hard100.py  aggregate_sweep.py  arbitrate_two_arms.py  count_completed_range.py  easy100_samples.json  finalize_full_results.py  full1581_samples.json  ground_with_hint.py  hard100_samples.json  make_sspro_slice.py  make_sweep_configs.py  make_sweep_samples.py  prepare_osworld_g.py  probe_discard_check.py  probe_m3_concurrency.py  report_screenspot_versions.py  run_ablation_reason_cand.py  run_easy100.py  run_full_m3_best.py  run_full_m3_optimal.py  run_hard100.py  run_osworld_g.py  run_screenspot_pro.py  run_sspro_slice_arm.py  simulate_crop_veto.py  start_full_autoretry.py  start_screenspot_versions.py  start_wrong_format_retry.py  sweep_samples.json  sweep_samples_min.json  tile_locator.py  update_network_retry_queue.py  wf_accum_ablation.js  wf_hard100.js  wf_param_sweep.js  wf_single_var_ablation.js
benchmarks/screenspot_pro/configs/: README.md  abl_accum_img.yaml  abl_accum_text.yaml  abl_coords.yaml  abl_dedup.yaml  abl_reason.yaml  abl_sort.yaml  ablation_off.yaml  ablation_on.yaml  best.yaml  fast.yaml  known_good.yaml  legacy_baseline.yaml  (+6 more)
benchmarks/screenspot_v2/: README.md
benchmarks/ui_vision/: README.md  prepare_ui_vision.py
docs/: README_CN.md  USAGE_CN.md  VM_SETUP.md  VM_SNAPSHOT_SETUP.md  benchmark_runs.md  install.md
gui_agent_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gui_harness/: __init__.py  error_monitor.py  main.py  openprogram_compat.py  utils.py
gui_harness/action/: click.py  clipboard.py  general_action.py
gui_harness/agentics/: __init__.py
gui_harness/memory/: app_memory.py  spreadsheet.py
gui_harness/perception/: template_match.py
gui_harness/planning/: active_localization.py  component_memory.py  create.py  post_click_diff.py  screenspot_locator.py
gui_harness/platform_info/: activate.py
gui_harness/tasks/: execute_task.py
runs/osworld_g/: OSWORLD_G_RESULTS.md
scripts/: install.ps1  install.sh
(+77 files in other folders)
