[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-agent-harness"
version = "0.4.0"
description = "Autonomous GUI agent — give it a task, it operates the desktop"
requires-python = ">=3.11"
dependencies = [
    "openprogram @ git+https://github.com/Fzkuji/OpenProgram.git@dde36899491858604c95387af360e89d2bf5070c",
    "pynput",
    "opencv-python",
    "numpy",
    "Pillow",
    "ultralytics",
    "requests",
]

[project.optional-dependencies]
ocr = ["easyocr"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gui-agent = "gui_harness.main:main"

[tool.setuptools.packages.find]
include = ["gui_harness*"]
