[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-agent-harness"
version = "0.4.0"
description = "Autonomous GUI agent — give it a task, it operates the desktop"
requires-python = ">=3.11"
# ``openprogram`` is the HOST, not a dependency: this harness only ever
# runs inside an OpenProgram install (loaded from functions/agentics/),
# so the host is always already present. Declaring it here would make
# ``pip install`` of this harness try to fetch/clobber the host. List
# only the harness's own third-party runtime deps.
dependencies = [
    "pynput",
    "opencv-python",
    "numpy",
    "Pillow",
    "ultralytics",
    "requests",
]

[project.optional-dependencies]
ocr = ["easyocr"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gui-agent = "gui_harness.main:main"

[tool.setuptools.packages.find]
include = ["gui_harness*"]
